# Stream-relay

./: .gitignore  .gitmodules  Cargo.toml  README.md  TemplateStatsResponse.json  build.rs  read.md  Кермит под ГМО.md
src/: main.rs
src/common/: logging.rs  mod.rs  uri.rs
src/relay/: mod.rs  pipe.rs  rist.rs  srt.rs  transport.rs
src/structures/: error.rs  health.rs  metrics.rs  mod.rs  stats_data.rs
src/web/: mod.rs  routes.rs
