[package]
name = "stream-relay"
version = "0.1.0"
edition = "2024"

[features]
rist = []
srt  = []

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
prometheus = "0.13"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["time"] }
