[package]
name = "stream-relay"
version = "0.1.0"
edition = "2024"

[features]
rist = []
srt  = []

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
prometheus = "0.13"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["time", "net", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "time"] }
tracing-log = "0.2"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
url = "2"
regex = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
